--- a/Principal/Principal/Principal.vcxproj.filters
+++ b/Principal/Principal/Principal.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="principal.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="menu.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="disciplina.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -39,15 +36,15 @@
     <ClCompile Include="Aluno.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="disciplina.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="listas.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="menu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="sala.h">
